# course-project-cg

./: CMakeLists.txt  README.md  main.cpp
BmpParser/: BmpParser.cpp  BmpParser.h
Camera/: Camera.cpp  Camera.h
Convertor/: ModelObjConvertor.cpp  ModelObjConvertor.h
Drawer/: Drawer.cpp  Drawer.h
Figures/: BaseFigure.cpp  BaseFigure.h  GeneralFigure.cpp  GeneralFigure.h  PyramidFigure.cpp  PyramidFigure.h  SquareFigure.cpp  SquareFigure.h  TerrainFigure.cpp  TerrainFigure.h
MapGenerator/: BaseMapGenerator.cpp  BaseMapGenerator.h
Other/: defines.h
Scene/: Scene.cpp  Scene.h
StuffObj/Model/: ModelObj.cpp  ModelObj.h
StuffObj/Parser/: ParserObj.cpp  ParserObj.h
